<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.nanodegree.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_appsLst"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:textSize="30dp"/>

        <Button
            style="@style/AppButton"
            android:text="@string/txtSpotify"
            android:id="@+id/btnSportify"
            android:onClick="launchApp" />

        <Button
            style="@style/AppButton"
            android:text="@string/txtScores"
            android:id="@+id/btnDuoScores"
            android:onClick="launchApp" />

        <Button
            style="@style/AppButton"
            android:text="@string/txtLib"
            android:id="@+id/btnDuoLib"
            android:onClick="launchApp" />

        <Button
            style="@style/AppButton"
            android:text="@string/txtBigger"
            android:id="@+id/btnBltBgr"
            android:onClick="launchApp" />

        <Button
            style="@style/AppButton"
            android:text="@string/txtXyz"
            android:id="@+id/btnReader"
            android:onClick="launchApp" />

        <Button
            style="@style/CapstoneAppButton"
            android:text="@string/txtCapstone"
            android:id="@+id/btnCapstone"
            android:onClick="launchApp" />

    </LinearLayout>
</RelativeLayout>
